--- a/frontend/src/components/share/share.css
+++ b/frontend/src/components/share/share.css
@@ -42,7 +42,8 @@
 }
 
 .shareOptions{
-  display: flex;   
+  display: flex;  
+  margin-left: 20px; 
 }
 
 .shareOption{
@@ -50,4 +51,25 @@
       align-items: center;
       margin-right: 15px;
       cursor: pointer;
+}
+
+.shareIcon{
+  font-size: 18px;
+  margin-right: 3px;
+}
+
+.shareOptionText{
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.shareButton{
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  background-color: green;
+  font-weight: 500;
+  margin-right: 20px;
+  cursor: pointer;
+  color: white;
 }
