--- a/frontend/src/pages/login/login.css
+++ b/frontend/src/pages/login/login.css
@@ -60,6 +60,13 @@ font-weight: 500;
 cursor: pointer;
 }
 
+.loginButton:focus{
+      outline: none;
+}
+.loginButton:disabled{
+      cursor: not-allowed;
+}
+
 .loginForgot{
      text-align: center; 
      color: #1775ee;
