--- a/frontend/src/components/share/share.css
+++ b/frontend/src/components/share/share.css
@@ -1,6 +1,5 @@
 .share {
   width: 100%;
-  height: 170px;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
@@ -41,29 +40,29 @@
   justify-content: space-between;
 }
 
-.shareOptions{
-  display: flex;  
-  margin-left: 20px; 
+.shareOptions {
+  display: flex;
+  margin-left: 20px;
 }
 
-.shareOption{
-      display: flex;
-      align-items: center;
-      margin-right: 15px;
-      cursor: pointer;
+.shareOption {
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
+  cursor: pointer;
 }
 
-.shareIcon{
+.shareIcon {
   font-size: 18px;
   margin-right: 3px;
 }
 
-.shareOptionText{
+.shareOptionText {
   font-size: 14px;
   font-weight: 500;
 }
 
-.shareButton{
+.shareButton {
   border: none;
   padding: 7px;
   border-radius: 5px;
@@ -72,4 +71,22 @@
   margin-right: 20px;
   cursor: pointer;
   color: white;
+}
+
+.shareImgContainer {
+  padding: 0 20px 10px 20px;
+  position: relative;
+}
+
+.shareImg {
+  width: 100%;
+  object-fit: cover;
+}
+
+.shareCancel {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  cursor: pointer;
+  opacity: 0.7;
 }
