--- a/frontend/src/components/share/share.css
+++ b/frontend/src/components/share/share.css
@@ -71,6 +71,9 @@
   margin-right: 20px;
   cursor: pointer;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .shareImgContainer {
