--- a/frontend/src/components/sidebar/sidebar.css
+++ b/frontend/src/components/sidebar/sidebar.css
@@ -1,50 +1,50 @@
 .sidebar {
   flex: 3;
   height: calc(100vh - 50px);
- overflow-y: scroll;
- position: sticky;
- top: 50px;
+  overflow-y: scroll;
+  position: sticky;
+  top: 50px;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 5px;
 }
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   background-color: #f1f1f1;
 }
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background-color: rgb(179, 179, 179);
 }
 
-.sidebarWrapper{
+.sidebarWrapper {
   padding: 20px;
- 
 }
-.sidebarList{
+.sidebarList {
   padding: 0;
   margin: 0;
   list-style: none;
-  
 }
 
-.sidebarListItem{
+.sidebarListItem {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-
 }
 
+.messengerLink {
+  text-decoration: none;
+  color: inherit;
+}
 
-
-.sidebarIcon{
+.sidebarIcon {
   margin-right: 15px;
 }
 
-.sidebarButton{
+.sidebarButton {
   width: 150px;
-  border:none;
+  border: none;
   padding: 10px;
-  border-radius:5px ;
+  border-radius: 5px;
   font-weight: 500;
 }
 
@@ -52,10 +52,8 @@
   margin: 20px 0;
 }
 
-.sidebarList{
+.sidebarList {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-
-
